<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="2">

<!--    <nl.dionsegijn.konfetti.KonfettiView-->
<!--        android:id="@+id/viewKonfetti"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent" />-->


<!--    START LEFT PANE     -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/wij"
            android:textAllCaps="true"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/wij_score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="10"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="230sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/wij_gewonnen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/gewonnen" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/wij_kapot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kapot" />

                <CheckBox
                    android:id="@+id/wij_aangespeeld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aangespeeld" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!--    START RIGHT PANE     -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/zij"
            android:textAllCaps="true"
            android:textSize="60sp" />


        <TextView
            android:id="@+id/zij_score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="8"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="230sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/zij_gewonnen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/gewonnen" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/zij_kapot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kapot" />

                <CheckBox
                    android:id="@+id/zij_aangespeeld"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aangespeeld" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>